--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,3 +1,6 @@
 <% @competitions.each do |competition| %>
   <h2><%= competition.name %></h2>
+  <p>
+    <%= link_to "Create tournament!", new_game_competition_tournament_path(competition.game, competition) %>
+  </p>
 <% end %>
