--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,5 @@
 <% @games.each do |game| %>
-  <h2><%= game.name %></h2>
+  <a href="<%= game_competitions_path(game) %>">
+    <h2><%= game.name %></h2>
+  </a>
 <% end %>
