added user tournaments list controller/view/menu item

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
       <div>
         <%= link_to "Find A Game", games_path %>
       </div>
+      <div>
+        <%= link_to "Your Tournaments", users_tournaments_path %>
+      </div>
     </div>
 
     <% if notice || alert  %>
