--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -16,15 +16,38 @@
     Start Time: <%= @draft.start_time %>
   </p>
 
-  <p>
-    Pick Order:
-  </p>
+  <div style="display:inline-block; width:50%; vertical-align:top;">
+    <h3> Current Pick: <%= "#{@current_pick.user.name} (Pick \##{@current_pick.number})" %> </h3>
 
-  <% @draft.picks.sort_by{ |pick| pick.number }.take(@draft.tournament.users.count).each_with_index do |pick, index| %>
+    <h4>
+      Pick Order:
+    </h4>
+
+    <% @draft.picks.sort_by{ |pick| pick.number }.each_with_index do |pick, index| %>
+    <% if pick.player_id.nil? %>
+      <p>
+        <%= "#{index + 1}: #{pick.user.name}" %>
+      </p>
+    <% else %>
+      <p style="text-decoration:line-through;">
+        <%= "#{index + 1}: #{pick.user.name}" %>
+      </p>
+    <% end %>
+    <% end %>
+  </div><div style="display:inline-block; width:50%; vertical-align:top;">
+    <h4>
+      Available Players:
+    </h4>
+
+    <% @available_players.each do |player| %>
     <p>
-      <%= "#{index + 1}: #{pick.user.name}" %>
+      <%= player.name %>
+      <% if @current_pick.user == current_user || current_user == @draft.tournament.admin %>
+      <%= link_to "Draft This Player", game_competition_tournament_draft_pick_path(@draft.tournament.competition.game, @draft.tournament.competition, @draft.tournament, @draft, @current_pick, player_id: player.id), method: :patch  %>
+      <% end %>
     </p>
-  <% end %>
+    <% end %>
+  </div>
 <% end %>
 
 
