--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -29,8 +29,8 @@
         <%= "#{index + 1}: #{pick.user.name}" %>
       </p>
     <% else %>
-      <p style="text-decoration:line-through;">
-        <%= "#{index + 1}: #{pick.user.name}" %>
+      <p style="color: gray;">
+        <%= "#{index + 1}: #{pick.user.name} || #{pick.player.name}" %>
       </p>
     <% end %>
     <% end %>
@@ -46,20 +46,6 @@
       <%= link_to "Draft This Player", game_competition_tournament_draft_pick_path(@draft.tournament.competition.game, @draft.tournament.competition, @draft.tournament, @draft, @current_pick, player_id: player.id), method: :patch  %>
       <% end %>
     </p>
-    <% end %>
-  </div>
-
-  <div>
-    <h3>Teams</h3>
-    <% @draft.tournament.users.each do |user| %>
-    <div style="display:inline-block; width:24%; vertical-align:top;">
-      <h4><%= user.name %></h4>
-      <% @draft.picks.where(user_id: user).where.not(player_id: nil).each do |pick| %>
-        <p>
-          <%= pick.player.name %>
-        </p>
-      <% end %>
-    </div>
     <% end %>
   </div>
 <% else %>
