--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -16,16 +16,16 @@
     Your draft has finished.
   </p>
 <% elsif @draft.active || Time.now > @draft.start_time %>
-  <div style="display:inline-block; width:50%; vertical-align:top;">
-    <h3> Current Pick: <%= "#{@current_pick.user.name} (Pick \##{@current_pick.number})" %> </h3>
-
+  <div id="picks" style="display:inline-block; width:50%; vertical-align:top;">
+    <h3 id="current-pick">
+      Current Pick: <%= "#{@current_pick.user.name} (Pick \##{@current_pick.number})" %> </h3>
     <h4>
       Pick Order:
     </h4>
 
     <% @draft.picks.sort_by{ |pick| pick.number }.each_with_index do |pick, index| %>
     <% if pick.player_id.nil? %>
-      <p>
+      <p id="pick-<%= pick.number %>">
         <%= "#{index + 1}: #{pick.user.name}" %>
       </p>
     <% else %>
@@ -34,16 +34,16 @@
       </p>
     <% end %>
     <% end %>
-  </div><div style="display:inline-block; width:50%; vertical-align:top;">
+  </div><div id="players" style="display:inline-block; width:50%; vertical-align:top;">
     <h4>
       Available Players:
     </h4>
 
     <% @available_players.each do |player| %>
-    <p>
+    <p id="<%= player.id %>">
       <%= player.name %>
       <% if @current_pick.user == current_user || current_user == @draft.tournament.admin %>
-      <%= link_to "Draft This Player", game_competition_tournament_draft_pick_path(@draft.tournament.competition.game, @draft.tournament.competition, @draft.tournament, @draft, @current_pick, player_id: player.id), method: :patch  %>
+      <%= link_to "Draft This Player", game_competition_tournament_draft_pick_path(@draft.tournament.competition.game, @draft.tournament.competition, @draft.tournament, @draft, @current_pick, player_id: player.id), method: :patch, remote: true, class: "pick-link"  %>
       <% end %>
     </p>
     <% end %>
