added create tournament links

--- a/app/views/users/tournaments.html.erb
+++ b/app/views/users/tournaments.html.erb
@@ -3,3 +3,11 @@
 <% current_user.tournaments.each do |tournament| %>
   <%= link_to "#{tournament.admin.name}'s \"#{tournament.competition.name}\" Tournament", game_competition_tournament_path(tournament.competition.game, tournament.competition, tournament) %>
 <% end %>
+
+
+<h2>Create A New Tournament</h2>
+<% Competition.all.each do |competition| %>
+  <p>
+    <%= link_to competition.name, new_game_competition_tournament_path(competition.game, competition) %>
+  </p>
+<% end %>
