--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -25,6 +25,9 @@
         <p id="current-pick">
           <%= @current_pick.user.name %>
         </p>
+        <p id="until-next-pick">
+          Picks Until You: <%= @picks_until_your_pick %>
+        </p>
       </div>
       <div class="pick-order-container col-md-10">
         <div class="pick-order">
