--- a/app/views/pick_mailer/next_pick.html.erb
+++ b/app/views/pick_mailer/next_pick.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Hey, <%= @user.name %>! It's your pick!</h1>
     <p>
-      According to our draftbots, you're participating in <%= @tournament.admin.name %>'s <%= @competition.name %> fantasy draft, and it's your turn to make a selection!
+      According to our draftbots, you're participating in <%= @league.admin.name %>'s <%= @competition.name %> fantasy draft, and it's your turn to make a selection!
     </p>
     <p>
       To make your pick, just follow this link: <%= @url %>.
