--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,12 +1,12 @@
 <div id="draft">
-  <h2>Your Draft For <%= @draft.tournament.competition.name %></h2>
+  <h2>Your Draft For <%= @draft.league.competition.name %></h2>
 
   <% if !@draft.start_time %>
     <p>
       Please select a start time for your draft.
     </p>
 
-    <%= form_for [@draft.tournament.competition.game, @draft.tournament.competition, @draft.tournament, @draft] do |f| %>
+    <%= form_for [@draft.league.competition.game, @draft.league.competition, @draft.league, @draft] do |f| %>
       <%= f.label "Start Time: " %>
       <%= f.datetime_field :start_time %>
 
@@ -80,8 +80,8 @@
       <% @available_players.each do |player| %>
       <p id="<%= player.id %>">
         <%= player.name %>
-        <% if @current_pick.user == current_user || current_user == @draft.tournament.admin %>
-        <%= link_to "Draft This Player", game_competition_tournament_draft_pick_path(@draft.tournament.competition.game, @draft.tournament.competition, @draft.tournament, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link"  %>
+        <% if @current_pick.user == current_user || current_user == @draft.league.admin %>
+        <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.competition.game, @draft.league.competition, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link"  %>
         <% end %>
       </p>
       <% end %>
