--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
         <% if current_user && !current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).length.zero? %>
           <%= drop_down "NOW DRAFTING" do %>
             <% current_user.drafts.where("start_time < ? AND completed = ?", Time.now, false).each do |draft| %>
-              <%= menu_item draft.tournament.competition.name, game_competition_tournament_draft_path(draft.tournament.competition.game, draft.tournament.competition, draft.tournament, draft) %>
+              <%= menu_item draft.league.competition.name, game_competition_league_draft_path(draft.league.competition.game, draft.league.competition, draft.league, draft) %>
             <% end %>
           <% end %>
         <% end %>
         <% if current_user %>
-          <%= menu_item "Your Tournaments", users_tournaments_path %>
+          <%= menu_item "Your leagues", users_leagues_path %>
         <% end %>
         <%= menu_item "Find A Game", games_path %>
         <% if current_user %>
