--- a/app/views/tournaments/new.html.erb
+++ b/app/views/tournaments/new.html.erb
@@ -1,7 +1,7 @@
-<h2>Create a tournament for <%= @competition.name %></h2>
+<h2>Create a league for <%= @competition.name %></h2>
 
-<%= form_for [@competition.game, @competition, @tournament] do |f| %>
+<%= form_for [@competition.game, @competition, @league] do |f| %>
 
-  <%= f.submit "Create tournament" %>
+  <%= f.submit "Create league" %>
 
 <% end %>
