updated view folders from tournaments to leagues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <% end %>
         <% end %>
         <% if current_user %>
-          <%= menu_item "Your leagues", users_leagues_path %>
+          <%= menu_item "Your Leagues", users_leagues_path %>
         <% end %>
         <%= menu_item "Find A Game", games_path %>
         <% if current_user %>
