--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,6 +2,9 @@
 
 <h1>
   <%= @team.name %>
+  <% if current_user == @team.user %>
+    <%= link_to "(Edit)", edit_game_competition_league_team_path(@team.league.competition.game, @team.league.competition, @team.league, @team) %>
+  <% end %>
 </h1>
 
 <% @team.players.each do |player| %>
