added navigation link to add players

--- a/app/views/league_users/index.html.erb
+++ b/app/views/league_users/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "< Back To Your League", game_competition_league_path(@league.competition.game, @league.competition, @league) %>
+
 <h2>Competitors In <%= @league.admin.name %>'s league For <%= @league.competition.name %></h2>
 
 <h3>Registered Users</h3>
