--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@team.league.competition.game, @team.league.competition, @team.league, @team] do |f| %>
+<%= form_for [@team.league.leagueable.game, @team.league.leagueable, @team.league, @team] do |f| %>
 
   <p>
     <%= f.label :name %>
