--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,9 +1,9 @@
-<%= link_to "< Back To Your League", game_competition_league_path(@team.league.competition.game, @team.league.competition, @team.league) %>
+<%= link_to "< Back To Your League", game_competition_league_path(@team.league.leagueable.game, @team.league.leagueable, @team.league) %>
 
 <h1>
   <%= @team.name %>
   <% if current_user == @team.user %>
-    <%= link_to "(Edit)", edit_game_competition_league_team_path(@team.league.competition.game, @team.league.competition, @team.league, @team) %>
+    <%= link_to "(Edit)", edit_game_competition_league_team_path(@team.league.leagueable.game, @team.league.leagueable, @team.league, @team) %>
   <% end %>
 </h1>
 
