--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,10 @@
         <% end %>
         <%= menu_item "Find A Game", games_path %>
         <% if current_user %>
-          <%= menu_item "Sign Out", destroy_user_session_path, method: "delete" %>
+          <%= drop_down current_user.name do %>
+            <%= menu_item "Profile", user_path(current_user) %>
+            <%= menu_item "Sign Out", destroy_user_session_path, method: "delete" %>
+          <% end %>
         <% else %>
           <%= menu_item "Sign In", new_user_session_path %>
         <% end %>
