--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,5 @@
 </h1>
 
 <p>
-  <%= link_to "Edit Profile", edit_user_registration_path(@user) %>
+  <%= link_to "Edit Profile", edit_user_registration_path %>
 </p>
