created individual channels for each draft

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,4 +1,4 @@
-<div id="draft">
+<div id="draft" data-draft=<%= @draft.id %>>
   <h2>Your Draft For <%= @draft.league.leagueable.name %></h2>
 
   <% if !@draft.start_time %>
