--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,4 +1,4 @@
-<div id="draft" data-draft=<%= @draft.id %>>
+<div id="draft" data-draft=<%= @draft.id %> data-user=<%= current_user.id %> data-team=<%= current_user.team(@draft.league).id %>>
   <h2>Your Draft For <%= @draft.league.leagueable.name %></h2>
 
   <% if !@draft.start_time %>
@@ -84,7 +84,9 @@
       <p id="<%= player.id %>">
         <%= player.name %>
         <% if @current_pick.user == current_user || current_user == @draft.league.admin %>
-        <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link"  %>
+          <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link"  %>
+        <% else %>
+          <%= link_to "Draft This Player", game_competition_league_draft_pick_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft, @current_pick, player_id: player.id, protocol: "https"), method: :patch, remote: true, class: "pick-link", style: "display: none;"  %>
         <% end %>
       </p>
       <% end %>
