--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
         <% if current_user %>
           <%= drop_down current_user.name do %>
             <%= menu_item "Profile", user_path(current_user) %>
+            <% if current_user.league_users.where(confirmed: false).length.nonzero? %>
+              <%= menu_item "Invites", invites_path %>
+            <% end %>
             <%= menu_item "Sign Out", destroy_user_session_path, method: "delete" %>
           <% end %>
         <% else %>
