--- a/app/views/league_users/index.html.erb
+++ b/app/views/league_users/index.html.erb
@@ -12,7 +12,13 @@
         <%= league_user.user.name %> (Admin)
       </p>
     <% else %>
-        <%= league_user.user.name %>
+      <% if league_user.confirmed %>
+        <%= link_to league_user.user.name, game_competition_league_team_path(@league.leagueable.game, @league.leagueable, @league, league_user.team(@league)) %>
+      <% else %>
+        <span class="unconfirmed">
+          <%= league_user.user.name %> <%= link_to "(Resend Invite)", game_competition_league_league_user_resend_invite_path(@league.leagueable.game, @league.leagueable, @league, league_user) %>
+        </span>
+      <% end %>
     <% end %>
     <%= link_to "Remove", game_competition_league_league_user_path(@league.leagueable.game,@league.leagueable, @league, league_user), method: :delete, data: { confirm: "Are you sure?" } %>
   </p>
