added sortable tables

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -79,7 +79,7 @@
       <h4>
         Available Players:
       </h4>
-      <table class="table">
+      <table class="table sortable">
         <thead>
           <tr>
             <th>
