fixed js to work with new table

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -95,8 +95,8 @@
         </thead>
         <tbody>
           <% @available_players.each do |player| %>
-          <tr>
-            <th scope="row" id="<%= player.id %>">
+          <tr id="<%= player.id %>">
+            <th scope="row">
               1
             </th>
             <td>
