added points to draft view

--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -97,7 +97,7 @@
           <% @available_players.each do |player| %>
           <tr id="<%= player.id %>">
             <th scope="row">
-              1
+              <%= player.results.find_by(competition_id: Competition.find_by_name("Pro Tour Aether Revolt").id, player_id: player.id).points %> 
             </th>
             <td>
               <%= player.name %>
