--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -88,7 +88,7 @@
             <th>
               Name
             </th>
-            <th>
+            <th data-defaultsort='disabled'>
 
             </th>
           </tr>
@@ -96,14 +96,14 @@
         <tbody>
           <% @available_players.each do |player| %>
           <tr id="<%= player.id %>">
-            <th scope="row" data-defaultsort="desc">
+            <td data-defaultsort="desc">
               <% result = player.results.find_by(competition_id: Competition.find_by_name("Pro Tour Aether Revolt").id, player_id: player.id) %>
               <% if result %>
                 <%= result.points %>
               <% else %>
                 0
               <% end %>
-            </th>
+            </td>
             <td>
               <%= player.name %>
             </td>
